Parsing data to a template

--- a/003-Parsing-Data/tpl.html
+++ b/003-Parsing-Data/tpl.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Drop by drop, the bucket gets filled!</h1>
+        <h2>Do you understand this {{.}}</h2>
     </body>
 </html>
