Used variables with templates

--- a/003-Parsing-Data/tpl.html
+++ b/003-Parsing-Data/tpl.html
@@ -5,7 +5,8 @@
         <title>Hello World!</title>
     </head>
     <body>
+        {{$wisdom := .}}
         <h1>Drop by drop, the bucket gets filled!</h1>
-        <h2>Do you understand this {{.}}</h2>
+        <h2>Do you understand this {{$wisdom}}?</h2>
     </body>
 </html>
